// project.proto
syntax = "proto3";

package project;

option go_package = "github.com/input-output-hk/catalyst-forge/lib/schema";

import "google/protobuf/struct.proto";

// ModuleBundle corresponds to the #ModuleBundle CUE definition.
message ModuleBundle {
    // Env contains the environment to deploy the modules to.
    string env = 1;

    // Modules contains the deployment modules.
    map<string, Module> modules = 2;
}

// Module corresponds to the #Module CUE definition.
message Module {
    // Instance contains the instance name to use for all generated resources.
    string instance = 1;

    // Name contains the name of the module to deploy.
    string name = 2;

    // Namespace contains the namespace to deploy the module to.
    string namespace = 3;

    // Path contains the path to the module.
    string path = 4;

    // Registry contains the registry to pull the module from.
    string registry = 5;

    // Type contains the type of the module.
    string type = 6;

    // Values contains the values to pass to the deployment module.
    google.protobuf.Struct values = 7;

    // Version contains the version of the deployment module.
    string version = 8;
}